# django-resilient-webhook

./: .gitignore  .prettierignore  README.md  SECURITY.md  manage.py  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  postcreate.sh
.github/workflows/: cd.yml  ci.yml  release.yml
django_resilient_webhook/: admin.py  apps.py  signals.py  urls.py  views.py
django_resilient_webhook/migrations/: 0001_initial.py  0002_alter_dispatchevent_id.py  0002_alter_dispatchevent_payload_alter_endpoint_data.py  0004_receivedevent.py
django_resilient_webhook/models/: __init__.py  _base.py  endpoint.py  event.py  webhook.py
django_resilient_webhook/utilities/: create_task.py  event_processing.py  model_serializer.py  settings.py  short_sha.py
tests/: test_event_processing.py
tests/data/receiver/: data.json  header.json
tests/server/: settings.py  signals.py  urls.py  wsgi.py
