[tool.poetry]
name = "django-resilient-webhook"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <naveenms01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<4,>=3.9"
django = ">=4.2.0"
google-cloud-tasks = "^2.19.1"
django-environ = "^0.12.0"
python-dotenv = "^1.0.1"
django-unfold = "^0.50.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.1.0"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.server.settings"
python_files = ["test_*.py"]
